feat: 初始化环境，定时任务逻辑
