# internal/router/user_router.go
@@ -1,6 +1,7 @@
 package router
 
 import (
+	"go-server/internal/client"
 	"go-server/internal/controller"
 	"go-server/internal/dao"
 	"go-server/internal/middleware"
@@ -12,15 +13,19 @@ import (
 func InitUserRouter(deps RouterDeps, r *gin.RouterGroup) {
 	// ================= 用户模块 =================
 	// 初始化依赖
-	userRepository := dao.NewUserRepository(deps.Repository)                  // dao
-	userService := service.NewUserService(deps.Service, userRepository)       // service
-	userController := controller.NewUserController(deps.Handler, userService) // controller
+	userRepository := dao.NewUserRepository(deps.Repository)
+	userClient := client.NewUserClient()                                            // dao
+	userService := service.NewUserService(deps.Service, userRepository, userClient) // service
+	userController := controller.NewUserController(deps.Handler, userService)       // controller
 
 	user := r.Group("/user")
 	// ✅ 不需要登录
 	{
 		user.POST("/login", userController.Login)
 		user.POST("/register", userController.Create)
+		// redis缓存http接口 用户列表 https://randomuser.me/api/
+		user.GET("/http", userController.HttpUserList)
+
 	}
 	// ✅ 需要登录
 	strictAuthRouter := user.Group("").Use(middleware.StrictAuth(deps.JWT, deps.Logger))
